gallery n img to brick db
